--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,10 @@
 buildscript {
     ext {
         compose_version = '1.0.1'
+        coroutines_version = '1.5.2'
+    }
+    dependencies {
+        classpath 'com.google.gms:google-services:4.3.10'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
