--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:theme="@style/Theme.NoteForTwo">
         android:largeHeap="true"
         <activity
+            android:windowSoftInputMode="stateVisible"
             android:name=".ui.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
